--- a/main.html
+++ b/main.html
@@ -23,9 +23,9 @@
       <p id="void">Deep Void (57, 18, 18)</p>
       <p id="darkness">Darkness Over Day (52, 29, 1)</p>
     </div>
-    <div class="links">
+    <!-- <div class="links">
       <p>Story</p>
       <p>Statement</p>
-    </div>
+    </div> -->
   </body>
 </html>
