--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>A Journey</title>
     <link href="style.css" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
-    <!-- <script src="script.js"></script> -->
+    <script src="script.js"></script>
   </head>
   <body>
     <div class="names">
@@ -23,9 +23,10 @@
       <p id="void">Deep Void (57, 18, 18)</p>
       <p id="darkness">Darkness Over Day (52, 29, 1)</p>
     </div>
-    <div class="links">
+
+    <!-- <div class="links">
       <p>Story</p>
       <p>Statement</p>
-    </div>
+    </div> -->
   </body>
 </html>
