--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
       <p id="void">Deep Void (57, 18, 18)</p>
       <p id="darkness">Darkness Over Day (52, 29, 1)</p>
     </div>
+    <!-- <a href="#bottom" id="hulk">Click me to go to bottom</a> -->
 
     <!-- <div class="links">
       <p>Story</p>
