--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>A Journey</title>
     <link href="style.css" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
-    <script src="script.js"></script>
+    <!-- <script src="script.js"></script> -->
   </head>
   <body>
     <div class="names">
@@ -23,6 +23,11 @@
       <p id="void">Deep Void (57, 18, 18)</p>
       <p id="darkness">Darkness Over Day (52, 29, 1)</p>
     </div>
+    <!-- <div class="flex-container">
+      <div class="circle"></div>
+    </div> -->
+      
+    
     <!-- <a href="#bottom" id="hulk">Click me to go to bottom</a> -->
 
     <!-- <div class="links">
